# nimbus

./: .env.example.dev  .env.example.prod  CHANGELOG.md  README.md  app.py  app.spec  build.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/configs/: default_config.py
src/constants/: messages.py  paths.py
src/services/: weather_service.py
src/ui/: interface_app.py  styles.py
src/ui/components/: search_bar.py  weather_information.py
src/ui/views/: main_view.py
src/utils/: helpers.py  tkinter_exception_hook.py
test/: conftest.py
test/test_configs/: test_default_config.py  test_development_config.py  test_production_config.py  test_testing_config.py
test/test_constants/: test_messages.py
test/test_services/: test_weather_service.py
test/test_ui/: test_interface_app.py  test_styles.py
test/test_ui/test_components/: test_search_bar.py  test_weather_information.py
test/test_ui/test_views/: main_view.py
test/test_utils/: test_helpers.py
tests/: conftest.py
tests/test_configs/: test_default_config.py  test_development_config.py  test_logger_config.py  test_production_config.py  test_testing_config.py
tests/test_constants/: test_messages.py  test_paths.py
tests/test_services/: test_weather_service.py
tests/test_ui/: test_interface_app.py  test_styles.py
tests/test_ui/test_components/: test_search_bar.py  test_weather_information.py
tests/test_ui/test_views/: test_main_view.py
tests/test_utils/: test_dialogs.py  test_error_handler.py  test_helpers.py  test_tkinter_exception_hook.py
