[project]
name = "nimbus"
version = "1.0.0"
description = "Nimbus is a desktop weather application built with Python and Tkinter that lets you look up real-time weather conditions for any city in the world."
requires-python = ">=3.11"
dependencies = [
    "geopy>=2.4",
    "pytz>=2025.1",
    "requests>=2.32",
    "timezonefinder>=8.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "pip-audit>=2.7",
    "ruff>=0.11",
]
test = [
    "pytest>=8.0",
    "pytest-env>=1.1",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.5",
]
build = [
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
log_cli = true
log_cli_level = "WARNING"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestCollectionWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
env = [
    "API_KEY=YOUR_API_KEY",
    "API_URL=https://api.openweathermap.org/data/2.5"
]

[tool.ruff]
line-length = 100
exclude = [".git", "__pycache__", "env", "venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"